[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art_resources/Items/wood.png" type="Texture" id=1]
[ext_resource path="res://Game_scenes/Items/pickup.tres" type="Animation" id=2]
[ext_resource path="res://Game_scenes/Items/drop.tres" type="Animation" id=3]
[ext_resource path="res://Game_scenes/Items/wood.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.0534
height = 8.96795

[node name="Wood" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/drop = ExtResource( 3 )
anims/pickup = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Wood_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
